# intrinsic3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/include/nv/: app_fusion.h  app_intrinsic3d.h  app_keyframes.h
apps/src/: app_fusion.cpp  app_intrinsic3d.cpp  app_keyframes.cpp
data/: fusion.yml  intrinsic3d.yml  keyframes.yml  sensor.yml
libintrinsic3d/: CMakeLists.txt
libintrinsic3d/include/nv/: camera.h  color_util.h  filesystem.h  keyframe_selection.h  mat.h  math.h  mesh.h  settings.h  shading.h  sparse_voxel_grid.h  timer.h
libintrinsic3d/include/nv/lighting/: lighting_svsh.h  subvolumes.h
libintrinsic3d/include/nv/mesh/: marching_cubes.h  util.h
libintrinsic3d/include/nv/refinement/: albedo_regularizer.h  cost.h  intrinsic3d.h  nls_solver.h  optimizer.h  shading_cost.h  surface_stab_regularizer.h  volumetric_regularizer.h
libintrinsic3d/include/nv/rgbd/: processing.h  pyramid.h  sensor.h  sensor_i3d.h
libintrinsic3d/include/nv/sdf/: algorithms.h  colorization.h  operators.h  visualization.h
libintrinsic3d/src/: camera.cpp  color_util.cpp  filesystem.cpp  keyframe_selection.cpp  math.cpp  mesh.cpp  settings.cpp  shading.cpp  sparse_voxel_grid.cpp
libintrinsic3d/src/lighting/: lighting_svsh.cpp  subvolumes.cpp
libintrinsic3d/src/mesh/: marching_cubes.cpp  util.cpp
libintrinsic3d/src/refinement/: albedo_regularizer.cpp  intrinsic3d.cpp  nls_solver.cpp  optimizer.cpp  shading_cost.cpp  surface_stab_regularizer.cpp  volumetric_regularizer.cpp
libintrinsic3d/src/rgbd/: processing.cpp  pyramid.cpp  sensor.cpp  sensor_i3d.cpp
libintrinsic3d/src/sdf/: algorithms.cpp  colorization.cpp  operators.cpp  visualization.cpp
